--- a/project/cola/package.json
+++ b/project/cola/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "grunt": "^1.0.3",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-uglify": "~0.5.0",
     "http-server": "^0.6.1"
   }
 }
