添加layout组件；添加国际化；添加数组函数总结

--- a/project/vueDemo/to-do/package.json
+++ b/project/vueDemo/to-do/package.json
@@ -12,7 +12,7 @@
     "clean": "rimraf dist",
     "lint": "eslint --ext .js --ext .jsx --ext .vue client/",
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue client/",
-    "precommit": "npm run lint-fix"
+    "precommit": ""
   },
   "author": "",
   "license": "ISC",
