--- a/project/vueDemo/FrameUI/package.json
+++ b/project/vueDemo/FrameUI/package.json
@@ -8,7 +8,6 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "element-ui": "^2.4.5",
     "vue": "^2.6.6"
   },
   "devDependencies": {
@@ -20,8 +19,9 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-i18n": "^8.11.2",
-    "vue-router": "^3.0.6",
-    "vue-template-compiler": "^2.5.21"
+    "vue-router": "^3.0.7",
+    "vue-template-compiler": "^2.5.21",
+    "vuex": "^3.1.1"
   },
   "eslintConfig": {
     "root": true,
